# noweb-typst-backend

./: CMakeLists.txt  README.md  document.cpp  emitter.cpp  emitter.hpp  main  main.cpp  out.typ
.cache/clangd/index/: document.hpp.740C8E13055CD6C9.idx  emitter.cpp.A2F049C655DD99EA.idx  emitter.hpp.801F70FB436B7066.idx  main.cpp.90A0236F633BC37A.idx  parser.cpp.80DF77267EFD88F7.idx  parser.hpp.0ADC993FF214346C.idx
include/: document.hpp
src/: emitter.cpp  main.cpp  parser.cpp
test/: out.typ  wordcount.md  wordcount.nw
